testdata/baselines/reference/submodule/conformance/typedefTagExtraneousProperty.errors.txt
typedefTagExtraneousProperty.js(8,3): error TS2339: Property 'ignoreMe' does not exist on type '{ bye: string; }'.


==== typedefTagExtraneousProperty.js (1 errors) ====
    /** @typedef {Object.<string,string>} Mmap
     * @property {string} ignoreMe - should be ignored
     */
    
    /** @type {Mmap} */
    var y = { bye: "no" };
    y
    y.ignoreMe = "ok but just because of the index signature"
      ~~~~~~~~
!!! error TS2339: Property 'ignoreMe' does not exist on type '{ bye: string; }'.
    y['hi'] = "yes"
    